--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "rotateX",
-  "version": "0.0.1",
+  "name": "rotatex",
+  "version": "0.0.6",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
+    "build": "babel lib -d build",
+    "build:watch": "babel lib -w -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "yuwancumian@hotmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",   
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
